# mazy

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: mazy-cicd.yml
src/mazy/: exceptions.py  maze_maker.py  utils.py
src/mazy/builders/: base_builder.py  binary_tree_builder.py  dummy_builder.py  sidewinder.py  sidewinder_builder.py
src/mazy/models/: builder.py  cell.py  maze.py  solver.py
src/mazy/solvers/: base_solver.py  dijkstra_shortest_path.py
src/mazy/viewers/: ascii_viewer.py  base_viewer.py  graphical_viewer.py
tests/: test_maze_maker.py  test_placeholder.py  test_utils.py
tests/builders/: test_binary_tree_builder.py  test_dummy_builder.py  test_sidewinder_builder.py
tests/models/: test_cell.py  test_maze.py  test_solver.py
tests/solvers/: test_dijkstra_shortest_path.py
tests/viewers/: test_ascii_viewer.py  test_graphical_viewer.py
