[tool.poetry]
name = "mazy"
version = "0.1.0"
description = "Just another maze generator and solver"
authors = ["Leandro Correia <leandro.correia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
