[tool.poetry]
name = "mazy"
version = "0.1.0"
description = "Just another maze generator and solver"
authors = ["Leandro Correia <leandro.correia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"
faker = "^19.13.0"
ruff = "^0.1.6"

[tool.ruff]
select = ["D100", "D101", "D102", "D103", "D201", "D202", "D204", "D205", "D211", "D400"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
